# Where-To

./: .gitignore  DEPLOY.md  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: config.py
backend/app/api/: jobs.py  main.py
backend/app/cache/: __init__.py  store.py
backend/app/clients/: __init__.py  base.py  google_places.py  google_routes.py  serpapi_flights.py  serpapi_hotels.py  serpapi_search.py
backend/app/grounding/: __init__.py  store.py  validate.py
backend/app/models/: __init__.py  core.py  itinerary.py  matrix.py  places.py  plan.py  request.py  research.py  travel.py
backend/app/orchestrator/: fakes.py  llm.py  pipeline.py  tools.py
backend/app/output/: __init__.py  assemble.py
backend/app/research/: __init__.py  brief.py
backend/app/solver/: __init__.py  clustering.py  itinerary.py
backend/app/util/: geo.py
backend/scripts/: live_smoke.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_clients.py  test_grounding.py  test_orchestrator.py  test_research.py  test_solver.py
backend/tests/fixtures/: places_searchtext.json  routes_matrix.json  serpapi_flights_outbound.json  serpapi_flights_return.json  serpapi_hotels.json  serpapi_search.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/plan/[id]/: page.tsx
frontend/src/components/: PlanView.tsx  ProgressScreen.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
